--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -31,11 +31,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  audioplayers: 1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +65,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
