--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
   audioplayers: 1.1.0
+  # CONNECT TO NESTJS/AUTHENTICATION
+  api_cache_manager: ^1.0.2
+  snippet_coder_utils: ^1.0.9
+  flutter_progress_hud: ^2.0.2
+  # OPTIONAL
+  animated_text_kit: ^4.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -66,7 +72,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/
+    - assets/images/star_wars_logo4.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
