Added Settings Page and Settings Button on login
Added a settings page to adjust background music. The changes are stored on the phone. Added settings button on login page to access settings page.

--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_progress_hud: ^2.0.2
   # OPTIONAL
   animated_text_kit: ^4.2.2
+  # SAVE DATA ON THE PHONE
+  shared_preferences: ^2.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
