--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -31,7 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  audioplayers: 1.1.0
+  audioplayers: ^5.1.0
   # CONNECT TO NESTJS/AUTHENTICATION
   api_cache_manager: ^1.0.2
   snippet_coder_utils: ^1.0.9
@@ -45,7 +45,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.3
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +75,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/star_wars_logo4.png
+    - assets/images/sith_ending.png
+    - assets/images/jedi_ending.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
