--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/images/star_wars_logo4.png
     - assets/images/sith_ending.png
     - assets/images/jedi_ending.png
+    - assets/images/placeholder.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
