--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "typeorm:revert-migrations": "npm run typeorm migration:revert -- -d ./typeorm.config.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -32,6 +33,7 @@
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
