--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   build:
     commands:
+       - npm install axios --save
        - npm audit fix --force
        - npm ci && npm run build # clean install (npm ci) and build (npm run build)
 
