--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
     commands:
        - npm install axios --save
        - npm audit fix --force
+       - npm fund
        - npm ci && npm run build # clean install (npm ci) and build (npm run build)
 
 artifacts:
