--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   build:
     commands:
-       $ npm i --save @nestjs/axios axios
+       - npm i --save @nestjs/axios axios
        - npm audit fix --force
        - npm ci && npm run build # clean install (npm ci) and build (npm run build)
 
