--- a/backend/package.json
+++ b/backend/package.json
@@ -37,8 +37,11 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dist": "^0.1.2",
     "express-rate-limit": "^7.0.1",
     "helmet": "^7.0.0",
+    "main": "^1000.0.1",
+    "man": "^2.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
