--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starwars-api",
+  "name": "backend",
   "version": "0.0.1",
   "description": "<p align=\"center\">\r   <a href=\"http://nestjs.com/\" target=\"blank\"><img src=\"https://nestjs.com/img/logo-small.svg\" width=\"200\" alt=\"Nest Logo\" /></a>\r </p>",
   "author": "",
@@ -100,5 +100,13 @@
   "main": ".eslintrc.js",
   "directories": {
     "test": "test"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/geovanie-ruiz/cen4910-proj.git"
+  },
+  "bugs": {
+    "url": "https://github.com/geovanie-ruiz/cen4910-proj/issues"
+  },
+  "homepage": "https://github.com/geovanie-ruiz/cen4910-proj#readme"
 }
