--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starwars-api",
+  "name": "backend",
   "version": "0.0.1",
   "description": "Combined repository for all three groups.",
   "author": "",
