--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dist": "^0.1.2",
     "express-rate-limit": "^7.0.1",
     "helmet": "^7.0.0",
     "main": "^1000.0.1",
