--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "helmet": "^7.0.0",
     "main": "^1000.0.1",
     "man": "^2.0.0",
+    "nginx": "^1.0.8",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
