--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,8 @@
-NODE_ENV=development
-PORT=3000
-MODE=DEV
-RUN_MIGRATIONS=true
+import { NestFactory } from '@nestjs/core';
+import { AppModule } from './app.module';
 
-# Database Configurations
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=admin
-POSTGRES_DATABASE=skywalker
+async function bootstrap() {
+  const app = await NestFactory.create(AppModule);
+  await app.listen(process.env.PORT || 3000);
+}
+bootstrap();
